update button style

--- a/src/components/Button/Button.module.sass
+++ b/src/components/Button/Button.module.sass
@@ -20,9 +20,12 @@
         background-color: var(--bw-ui-button-hover-bgcolor, #0061CA)
 
 .button__content,
-.button__icon
+.button__icon   
     display: block
     padding: 0.5rem 0.857rem
 
 .button__icon
+    display: flex
+    align-items: center
+    justify-content: center
     background-color: rgba(0, 0, 0, 0.1)
